Fix layout issue with home page template on af4-agrilife-org

--- a/css/src/_layout.scss
+++ b/css/src/_layout.scss
@@ -1,9 +1,13 @@
-
 .site-inner {
 	padding: 0 1rem;
 }
 
 @include breakpoint(medium up) {
+
+	.layout-container {
+		@include xy-grid-container($break-xlarge, 0);
+	}
+
 	.site-inner {
 		padding: 0;
 
